[11.0][FIX] cb_maintenance_project: hide fields

--- a/cb_maintenance_project/views/maintenance_request.xml
+++ b/cb_maintenance_project/views/maintenance_request.xml
@@ -30,6 +30,12 @@
             <field name="maintenance_type" position="attributes">
                 <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
             </field>
+            <field name="technician_id" position="attributes">
+                <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
+            </field>
+            <field name="owner_user_id" position="attributes">
+                <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
+            </field>
             <xpath expr="//field[@name='schedule_date']/.." position="attributes">
                 <attribute name="attrs">{'invisible': [('is_project', '=', True), ('parent_id', '=', False)]}</attribute>
             </xpath>
