--- a/cb_maintenance/views/maintenance_equipment.xml
+++ b/cb_maintenance/views/maintenance_equipment.xml
@@ -24,6 +24,23 @@
         </field>
     </record>
 
+    <record model="ir.ui.view" id="hr_equipment_view_kanban">
+        <field name="name">maintenance.equipment.kanban (in cb_maintenance)</field>
+        <field name="model">maintenance.equipment</field>
+        <field name="inherit_id" ref="maintenance.hr_equipment_view_kanban"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@t-if='!record.owner_user_id.raw_value']" position="attributes">
+                <attribute name="t-if">1==0</attribute>
+            </xpath>
+            <xpath expr="//div[@t-if='record.owner_user_id.raw_value']" position="attributes">
+                <attribute name="t-if">1==0</attribute>
+            </xpath>
+            <xpath expr="//img[hasclass('oe_kanban_avatar')]" position="attributes">
+                <attribute name="t-if">1==0</attribute>
+            </xpath>
+        </field>
+    </record>
+
     <record model="ir.ui.view" id="hr_equipment_view_tree">
         <field name="name">maintenance.equipment.form (in cb_maintenance)</field>
         <field name="model">maintenance.equipment</field>
