[11.0][IMP] cb_maintenance: base_remote integration

--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -103,6 +103,12 @@
                 </div>
             </xpath>
 
+            <!--
+            <field name="remote_id" position="after">
+                <field name="link_ocs" widget="url"/>
+            </field>
+            -->
+
         </field>
     </record>
 
