--- a/maintenance_location/views/maintenance_location.xml
+++ b/maintenance_location/views/maintenance_location.xml
@@ -11,7 +11,7 @@
         <form class="oe_form_configuration">
             <sheet>
                 <div class="oe_title">
-                    <label for="name" string="Category name" class="oe_edit_only"/>
+                    <label for="name" string="Location name" class="oe_edit_only"/>
                     <h1><field name="name" placeholder="e.g. Building A"/></h1>
                 </div>
                 <group name="first" col="2">
