[11.0][IMP] cb_maintenance: Equipment name_get

--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -219,7 +219,7 @@
     </record>
 
     <record id="maintenance.hr_equipment_request_action" model="ir.actions.act_window">
-        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_mode">tree,kanban,form</field>
         <field name="context">{'search_default_todo': 1}</field>
     </record>
 
