--- a/cb_maintenance_project/views/maintenance_request.xml
+++ b/cb_maintenance_project/views/maintenance_request.xml
@@ -90,11 +90,19 @@
     </record>
 
     <record id="maintenance.hr_equipment_todo_request_action_from_dashboard" model="ir.actions.act_window">
-        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_mode">tree,kanban,form</field>
+        <field name="view_id" eval="False"/>
         <field name="domain">[
             '|', ('is_project', '=', False), ('parent_id', '!=', False),
             ('maintenance_team_id', 'child_of', active_id),
             ('maintenance_type', 'in', context.get('maintenance_type', ['preventive', 'corrective']))]
+        </field>
+        <field name="context">
+            {
+                'search_default_todo': 1,
+                'search_default_group_stages': 1,
+                'default_maintenance_team_id': active_id,
+            }
         </field>
     </record>
 
