--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -174,6 +174,9 @@
             <xpath expr="//div[hasclass('o_dropdown_kanban')]" position="attributes">
                 <attribute name="t-if">1==0</attribute>
             </xpath>
+            <xpath expr="//div[hasclass('oe_kanban_bottom_right')]" position="attributes">
+                <attribute name="t-if">1==0</attribute>
+            </xpath>
         </field>
     </record>
 
