--- a/cb_maintenance/views/res_partner.xml
+++ b/cb_maintenance/views/res_partner.xml
@@ -19,4 +19,15 @@
         </field>
     </record>
 
+    <record model="ir.ui.view" id="view_partner_simple_form">
+        <field name="name">res.partner.simplified.form (in cb_maintenance)</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="base.view_partner_simple_form"/>
+        <field name="arch" type="xml">
+            <field name="mobile" position="after">
+                <field name="is_maintenance_technician"/>
+            </field>
+        </field>
+    </record>
+
 </odoo>
