[11.0][IMP] cb-maintenance creation wizard equipment

--- a/cb_maintenance/views/maintenance_equipment_category.xml
+++ b/cb_maintenance/views/maintenance_equipment_category.xml
@@ -18,6 +18,7 @@
             </field>
             <field name="technician_user_id" position="after">
                 <field name="selectable"/>
+                <field name="requires_equipment"/>
             </field>
         </field>
     </record>
