--- a/cb_maintenance/wizards/wizard_create_maintenance_request.xml
+++ b/cb_maintenance/wizards/wizard_create_maintenance_request.xml
@@ -18,10 +18,16 @@
                     <group>
                         <group>
                             <field name="location_id" widget="child_selector" options="{'child_selection_field': 'name', 'no_open': True}"/>
+                            <field name="priority" widget="priority"/>
                         </group>
                         <group>
-                            <field name="equipment_category" widget="radio" options="{'no_create': True}"/>
-                            <field name="priority" widget="priority"/>
+                            <field name="equipment_category" widget="child_selector"
+                                   options="{'child_selection_field': 'name', 'no_open': True}"/>
+                            <field name="requires_equipment" invisible="1"/>
+                            <field name="equipment_id"
+                                   domain="[('location_id', 'child_of', location_id), ('category_id', 'child_of', equipment_category)]"
+                                   attrs="{'invisible': [('requires_equipment', '=', False)], 'required': [('requires_equipment', '=', True)]}"
+                                   options="{'no_open': True, 'no_create': True}"/>
                         </group>
                     </group>
                     <group>
