--- a/cb_maintenance/views/maintenance_equipment.xml
+++ b/cb_maintenance/views/maintenance_equipment.xml
@@ -30,6 +30,11 @@
                 </div>
                 <field name="image" widget="image" class="oe_avatar" options='{"preview_image": "image_medium"}'/>
             </xpath>
+            <div name="button_box" position="inside">
+                <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive">
+                    <field name="active" widget="boolean_button" options='{"terminology": "archive"}'/>
+                </button>
+            </div>
         </field>
     </record>
 
