[11.0][IMP] cb_maintenance: attach files in request

--- a/cb_maintenance/wizards/wizard_create_maintenance_request.xml
+++ b/cb_maintenance/wizards/wizard_create_maintenance_request.xml
@@ -31,7 +31,8 @@
                         </group>
                     </group>
                     <group>
-                        <field name="description"/>
+                        <field name="description"/><br/>
+                        <field name="attachment_ids" widget="many2many_binary" string="Attach a file" nolabel="1" colspan="2"/>
                     </group>
                 </sheet>
                 <footer>
