--- a/cb_maintenance/views/maintenance_equipment_category.xml
+++ b/cb_maintenance/views/maintenance_equipment_category.xml
@@ -20,6 +20,9 @@
                 <field name="selectable"/>
                 <field name="requires_equipment"/>
             </field>
+            <group name="group_alias" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </group>
         </field>
     </record>
 
