--- a/cb_maintenance/views/maintenance_stage.xml
+++ b/cb_maintenance/views/maintenance_stage.xml
@@ -22,6 +22,7 @@
         <field name="arch" type="xml">
             <field name="name" position="after">
                 <field name="state"/>
+                <field name="function"/>
             </field>
             <field name="fold" position="attributes">
                 <attribute name="invisible">1</attribute>
