[11.0][FIX] Get subcategories on search

--- a/maintenance_equipment_category_hierarchy/views/maintenance_equipment_category.xml
+++ b/maintenance_equipment_category_hierarchy/views/maintenance_equipment_category.xml
@@ -4,16 +4,13 @@
 
 <odoo>
 
-    <record model="ir.ui.view" id="hr_equipment_category_view_form">
-        <field name="name">maintenance.equipment.category.form (in maintenance_equipment_category_hierarchy)</field>
+    <record model="ir.ui.view" id="hr_equipment_category_view_tree">
+        <field name="name">maintenance.equipment.category.tree (in maintenance_equipment_category_hierarchy)</field>
         <field name="model">maintenance.equipment.category</field>
-        <field name="inherit_id" ref="maintenance.hr_equipment_category_view_form"/>
+        <field name="inherit_id" ref="maintenance.hr_equipment_category_view_tree"/>
         <field name="arch" type="xml">
-            <xpath expr="//group[@col='4']" position="attributes">
-                <attribute name="col"/>
-            </xpath>
-            <field name="technician_user_id" position="after">
-                <field name="parent_id" options="{'no_create': True}"/>
+            <field name="name" position="after">
+                <field name="parent_id"/>
             </field>
         </field>
     </record>
@@ -28,7 +25,18 @@
             </xpath>
             <field name="technician_user_id" position="after">
                 <field name="parent_id"/>
-                <filter name="parent_categ" string="Parent Categories" domain="[('parent_id', '=', False)]"/>
+                <field name="child_id" widget="many2many_tags" readonly="1"/>
+            </field>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="hr_equipment_request_view_search">
+        <field name="name">maintenance.request.search (in maintenance_location)</field>
+        <field name="model">maintenance.request</field>
+        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_search"/>
+        <field name="arch" type="xml">
+            <field name="category_id" position="attributes">
+                <attribute name="filter_domain">[('category_id', 'child_of', raw_value)]</attribute>
             </field>
         </field>
     </record>
