--- a/cb_maintenance_report/report/maintenance_request_report.xml
+++ b/cb_maintenance_report/report/maintenance_request_report.xml
@@ -10,6 +10,7 @@
                 model="maintenance.request"
                 string="Print Maintenance Request"
                 report_type="qweb-pdf"
+                groups="maintenance.group_equipment_manager"
                 name="cb_maintenance_report.maintenance_request_template"
                 print_report_name="'MaintenanceRequest-%s' % object.code"
         />
