[11.0][FIX] description filter

--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -224,6 +224,9 @@
                  <field name="manager_id"/>
                  <field name="technician_id"/>
             </field>
+            <field name="name" position="after">
+                <field name="description"/>
+            </field>
             <filter name="my_requests" position="attributes">
                 <attribute name="domain">[('follower_id', '=', uid)]</attribute>
                 <attribute name="string">On my hands</attribute>
