[11.0][IMP] cb_maintenance: Set location required on categorty

--- a/cb_maintenance/views/maintenance_equipment_category.xml
+++ b/cb_maintenance/views/maintenance_equipment_category.xml
@@ -19,6 +19,7 @@
             <field name="technician_user_id" position="after">
                 <field name="selectable"/>
                 <field name="requires_equipment"/>
+                <field name="requires_location"/>
             </field>
             <group name="group_alias" position="attributes">
                 <attribute name="invisible">1</attribute>
