--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -15,8 +15,8 @@
                 <attribute name="edit">false</attribute>
             </form>
 
-            <field name="owner_user_id" position="after">
-                <field name="solved_id" attrs="{'invisible': [('solved_id', '=', False)]}" options="{'no_open': True}"/>
+            <field name="request_date" position="attributes">
+                <attribute name="invisible">1</attribute>
             </field>
 
             <xpath expr="//label[@for='name']" position="attributes">
@@ -66,6 +66,7 @@
 
             <field name="close_date" position="after">
                 <field name="close_datetime" attrs="{'invisible': [('close_datetime', '=', False)]}"/>
+                <field name="solved_id" attrs="{'invisible': [('solved_id', '=', False)]}" options="{'no_open': True}"/>
             </field>
             <button name="archive_equipment_request" position="attributes">
                 <attribute name="invisible">1</attribute>
