--- a/cb_maintenance/views/maintenance_equipment.xml
+++ b/cb_maintenance/views/maintenance_equipment.xml
@@ -35,6 +35,10 @@
                     <field name="active" widget="boolean_button" options='{"terminology": "archive"}'/>
                 </button>
             </div>
+            <field name="category_id" position="attributes">
+                <attribute name="widget">web_widget_child_selector</attribute>
+                <attribute name="options">{'child_selection_field': 'name', 'no_open': True}</attribute>
+            </field>
         </field>
     </record>
 
