--- a/maintenance_location/views/maintenance_location.xml
+++ b/maintenance_location/views/maintenance_location.xml
@@ -37,6 +37,7 @@
         <field name="model">maintenance.location</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="sequence" widget="handle"/>
                 <field name="complete_name"/>
             </tree>
         </field>
