--- a/maintenance_location/views/maintenance_equipment.xml
+++ b/maintenance_location/views/maintenance_equipment.xml
@@ -7,7 +7,7 @@
     <record model="ir.ui.view" id="hr_equipment_view_form">
         <field name="name">maintenance.equipment.form (in maintenance_location)</field>
         <field name="model">maintenance.equipment</field>
-        <field name="inherit_id" ref="maintenance.hr_equipment_view_form"/>
+        <field name="inherit_id" ref="maintenance_plan.hr_equipment_view_form"/>
         <field name="arch" type="xml">
             <field name="location" position="attributes">
                 <attribute name="invisible">1</attribute>
