[11.0][IMP] Add categories to maintenance_plans

--- a/cb_maintenance/views/maintenance_plan.xml
+++ b/cb_maintenance/views/maintenance_plan.xml
@@ -11,6 +11,7 @@
         <field name="arch" type="xml">
             <field name="maintenance_team_id" position="after">
                 <field name="technician_id" options="{'no_open': True, 'no_create': True}"/>
+                <field name="category_id" options="{'no_open': True, 'no_create': True}"/>
             </field>
         </field>
     </record>
@@ -23,6 +24,7 @@
         <field name="arch" type="xml">
             <field name="maintenance_team_id" position="after">
                 <field name="technician_id"/>
+                <field name="category_id"/>
             </field>
         </field>
     </record>
